# flyio

./: .gitignore  MODULE.bazel
cecho/: BUILD  bazel-bin  bazel-cecho  bazel-out  bazel-testlogs  main.cpp
toolchain/: BUILD  cc_toolchain_config.bzl
uuid/: BUILD  distributor.cc  generator.cc  uuid.proto
