###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################
'''Contains all the dependencies'''
bazel_dep(name = "jsoncpp", version = "1.9.6")
bazel_dep(name = "glog", version = "0.7.1")
